# swagger.yml
@@ -205,3 +205,39 @@ paths:
               properties:
                 symbol:
                   type: string
+
+  /quotes/movers/{direction}:
+     get:
+        operationId: get_stock_prices.getMovers
+        tags:
+          - stocks
+        summary: Get top movers
+        description: Get top movers
+        parameters:
+          - name: direction
+            in: path
+            description: Direction movement
+            type: string
+            required: True
+        responses:
+          200:
+            description: Successfully found stock
+            schema:
+              type: array
+              items:
+                properties:
+                  symbol:
+                    type: string
+                  pricedate:
+                    type: string
+                  closep:
+                    type: string
+                  volume:
+                    type: string
+                  timestamp:
+                    type: string
+
+
+
+
+
